# mem-switch

./: .gitignore  CHANGELOG.md  Dockerfile.backend  Dockerfile.windows-build  PACKAGING.md  README-en.md  README.md  TESTING.md  docker-compose.yml  package-lock.json  package.json
backend/: .coverage  cli.py  config.py  conftest.py  exceptions.py  main.py  pyproject.toml  requirements.txt
backend/adapters/: __init__.py  base_adapter.py  claude_code_adapter.py  claude_mem_adapter.py  clipboard_adapter.py  codex_adapter.py  gemini_cli_adapter.py  generic_adapter.py  hermes_adapter.py  json_file_adapter.py  markdown_adapter.py  openclaw_adapter.py  opencode_adapter.py
backend/middleware/: __init__.py  logging.py
backend/migrations/: 001_add_channels.sql  002_add_memory_management_fields.sql  migrate_qdrant_to_chroma.py
backend/platform_adapters/: __init__.py  base_adapter.py  claude_code_adapter.py  codex_adapter.py  gemini_cli_adapter.py  hermes_adapter.py  openclaw_adapter.py  opencode_adapter.py
backend/services/: batch_import_service.py  channel_manager.py  conversation_importer.py  database.py  document_processor.py  hardware_detector.py  knowledge_service.py  memory_extractor.py  memory_injector.py  memory_proxy.py  memory_service.py  ollama_service.py  profile_manager.py  search_service.py  task_queue.py  vector_store.py
backend/tests/: conftest.py  test_channel_manager.py  test_claude_code_adapter.py  test_claude_mem_adapter.py  test_clipboard_adapter.py  test_codex_adapter.py  test_health_api.py  (+21 more)
src-tauri/: Cargo.toml  linux-launch.sh  tauri.conf.json
(+111 files in other folders)
